# unirag-ai

./: .env.example  .gitignore  README.md  pyproject.toml
data/benchmarks/: questions.csv
data/reports/: EVALUATION_REPORT.md  EVALUATION_REPORT_TEMPLATE.md  summary.md
scripts/: evaluate.py  ingest.py  make_benchmark_template.py  score_rubric.py
src/unirag/: __init__.py  api.py  config.py  llm.py  loader.py  rag.py  schemas.py  vectorstore.py
