[project]
name = "uniadmin-ai"
version = "0.1.0"
description = "Administrative RAG case-study starter for student services queries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic>=2.10",
  "python-dotenv==1.0.1",
  "pypdf==5.0.1",
  "pandas==2.2.3",
  "numpy>=1.26.0,<2.0",
  "langchain==0.3.2",
  "langchain-community==0.3.1",
  "langchain-text-splitters==0.3.2",
  "faiss-cpu>=1.9.0",
  "tqdm==4.66.5",
  "langchain-ollama>=0.2.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unirag"]

[tool.hatch.build.targets.editable]
packages = ["src/unirag"]
